z-index fix

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -69,6 +69,12 @@ font-family: 'Handlee', cursive;
    height: 0;
    clear: both;
 }
+
+body {
+    line-height: 1;
+    position: relative;
+    z-index: -100;
+}
 /*************************** Global css functions -end ********************/
 
 
@@ -242,6 +248,8 @@ input:checked + .slide-container .nav label{
 footer {
 	padding: 3%;
 	background: cadetblue;
+  position: relative;
+  z-index: 100;
 }
 
 h1 {
@@ -325,26 +333,13 @@ figcaption{
   opacity: 0;
   transition: opacity .5s;
 }
-figure figcaption:hover{
-  transition: all .5s;
-  opacity: 1;
-  box-shadow: 0 0 0 2.7em rgba(0,0,0, .3);
-}
 
 .homeimage {
 	position:relative;
+  z-index: 0;
+  margin-bottom: -30px;
+  overflow: hidden;
 }
-
-
-.homeimage a:hover img{
-	transition: all 0.3s ease;
--webkit-transform: scale(1.3);
--ms-transform: scale(1.3);
-transform: scale(1.3);
-box-shadow: inset 0 0 0 25px #53a7ea;
-}
-
-
 
 .homeimage figure figcaption{
   position: absolute;
@@ -364,6 +359,21 @@ box-shadow: inset 0 0 0 25px #53a7ea;
 	font-size: x-large;
 font-family: 'Indie Flower', cursive;
 }
+
+figure figcaption:hover{
+  transition: all .5s;
+  opacity: 1;
+  box-shadow: 0 0 0 2.7em rgba(0,0,0, .3);
+}
+
+.homeimage a:hover img{
+	transition: all 0.3s ease;
+-webkit-transform: scale(1.3);
+-ms-transform: scale(1.3);
+transform: scale(1.3);
+box-shadow: inset 0 0 0 25px #53a7ea;
+}
+
 
 .homeimage figure:hover figcaption{
   transition: opacity .5s;
